compiler/testData/cli/jvm/diagnosticTests/recordAsSingleFileRoot.out
compiler/testData/cli/jvm/diagnosticTests/recordAsSingleFileRoot.kt:5:14: error: unresolved reference 'Unresolved'.
fun error(): Unresolved? = null
             ^^^^^^^^^^
COMPILATION_ERROR
